Fix/ Profile edit page: fix alignment of preferred name label (#734)

--- a/styles/pages/profile-edit.scss
+++ b/styles/pages/profile-edit.scss
@@ -180,7 +180,7 @@ main.profile-edit {
         text-overflow: ellipsis;
       }
     }
-    &__tilde-id {
+    &__tilde-id, .preferred {
       color: constants.$subtleGray;
       font-size: .75rem;
       margin-right: .5rem;
